--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "devDependencies": {
     "karma" : "~0.10",
     "karma-safari-launcher": "~0.1",
+    "http-server": "^0.6.1",
     "bower": "^1.3.1"
   },
   "scripts": {
     "postinstall": "bower install",
     "test": "karma start test/karma.conf.js",
-    "test-single-run": "karma start test/karma.conf.js  --single-run"
+    "test-single-run": "karma start test/karma.conf.js  --single-run",
+    "start": "http-server -p 8000"
   }
 }
