--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "karma" : "~0.10",
     "karma-safari-launcher": "~0.1",
+    "karma-ie-launcher": "~0.1",
     "http-server": "^0.6.1",
     "bower": "^1.3.1"
   },
