--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "repository": "https://github.com/zjuwwq/angular-ui-placeholder.git",
   "license": "MIT",
   "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.4.0",
     "karma" : "~0.10",
     "karma-safari-launcher": "~0.1",
     "karma-ie-launcher": "~0.1",
