--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.2.x"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.x"
+    "angular-mocks": "~1.2.x",
+    "jquery": "~2.x"
   }
 }
